# path-tracer

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  api-proto.txt  compile_commands.json  vcpkg.json
api-test/: CMakeLists.txt  command-buffer.cpp  main.cpp  vk-bindless.cpp  vk-command-buffer.cpp  vk-device.cpp  vk-utils.cpp
include/: aabb.hpp  bvh-node.hpp  bvh.hpp  camera.hpp  color.hpp  compute-renderpass.hpp  defines.hpp  dielectric.hpp  gltf.hpp  hittable.hpp  hittable_list.hpp  lambertian.hpp  material.hpp  mesh.hpp  metal.hpp  primitive-renderpass.hpp  ray.hpp  renderpass.hpp  resource-manager.hpp  rt.hpp  scene.hpp  sphere.hpp  texture.hpp  triangle.hpp  utils.hpp  vec3.hpp  vk-api.hpp  vk-context.hpp  vk-renderer.hpp  vulkan-loader.hpp  window.hpp
include/api-test/: buffer.hpp  command-buffer.hpp  freelist.hpp  handle.hpp  resource-manager.hpp  texture.hpp  vk-bindless.hpp  vk-command-buffer.hpp  vk-device-types.hpp  vk-device.hpp  vk-utils.hpp
models/BistroExterior/: BistroExterior.gltf
models/BistroInterior/: BistroInterior.gltf
shaders/: CMakeLists.txt  api-test-ui.frag  api-test-ui.vert  compute.comp  test.comp  tonemapping.comp  ui.frag  ui.vert
shaders/include/: brdf.h  color_utils.h  math.h  rand.h  ray.h
src/: CMakeLists.txt  bvh.cpp  camera.cpp  color.cpp  compute-renderpass.cpp  dielectric.cpp  gltf.cpp  hittable_list.cpp  lambertian.cpp  main.cpp  mesh.cpp  metal.cpp  primitive-renderpass.cpp  ray.cpp  resource-manager.cpp  scene.cpp  sphere.cpp  utils.cpp  vec3.cpp  vk-api.cpp  vk-context.cpp  vk-renderer.cpp  vulkan-loader.cpp  window.cpp
